# speedy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml  release.yml
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  api.ts  index.tsx
client/src/components/: ResultsTable.tsx
src/: db.rs  handlers.rs  main.rs  routes.rs  runner.rs  schema.sql  speedtest.rs
static/: index.html
