[package]
name = "speedy"
version = "0.1.0"
authors = ["hasan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossbeam = { version = "0.7", features = ["crossbeam-channel"] }
dotenv = "0.15"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.3", features = ["sqlite"] }
tokio = { version = "0.2", features = ["macros", "process", "rt-core", "sync", "time"] }
