[package]
name = "speedy"
version = "0.1.0"
authors = ["hasan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1"
actix-web = "2.0"
anyhow = "1.0"
chrono = "0.4"
cron = "0.6"
dotenv = "0.15"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.3", features = ["sqlite"] }
tokio = { version = "0.2", features = ["macros", "process", "sync"] }
